--- a/package.json
+++ b/package.json
@@ -24,12 +24,20 @@
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.9.1",
+    "@types/fetch-mock": "^7.2.3",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
     "@types/react-test-renderer": "^16.8.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "fetch-mock": "^7.3.1",
     "husky": "^1.3.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.7.1",
+    "jest-fetch-mock": "^2.1.2",
+    "mock-local-storage": "^1.1.8",
     "parcel": "^1.12.3",
     "react-test-renderer": "^16.8.6",
     "sass": "^1.18.0",
